bad/method_call_invalid_arg_conversion_string_to_class.example_compiler_output
ERROR
[1mbad/method_call_invalid_arg_conversion_string_to_class.lat:3:15: [1;31merror: [0;1mvalue of type `string` is not convertible to type `X`[m
	(new G).foo("");
	             [1;32m^[m
[1mbad/method_call_invalid_arg_conversion_string_to_class.lat:9:2: [1;34mnote: [0;1m`foo` declared here[m
	void foo(X a) {}
	[1;32m^[m
